fixed horizontal scrollbar (max-width:100% + overflow-x:hidden), fixed coloring of tailored.png

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,8 @@
     margin:0px;
     padding:0px;
     width: 100vw;
+    max-width: 100%;
+    overflow-x: hidden;
     //max-width: 1080px;
     //text-align: center;
     /*
@@ -20,6 +22,7 @@
         height:100vh;
         min-height: 860px; 
         width:100vw;
+        max-width: 100%;
         background-color: rgb(50,173,170);
         background-image: url('../assets/black-felt.png'); 
         position: relative;
@@ -104,6 +107,7 @@
     .body {
         height:100vh;
         width: 100vw;
+        max-width: 100%;
         margin: auto;
         background: rgb(255, 255, 255);
         color: black;
